# ttim

./: .gitlab-ci.yml  CMakeLists.txt  LICENSE  readme.md  sonar-project.properties
doc/: doc.md
doc/source/: ttim_sm.graphml
inc/: ttim.h
src/: ttim.c
test/: project.yml  unit_tests.yml
test/options/: dynamic.yml  gcov.yml  static.yml  static_periodic_tick.yml
test/test/: test_general.c  ttim_config.h
test/test/support/: ttim_abstraction.c  ttim_abstraction.h
test/test/test_port/: CMakeLists.txt  ttim_abstraction.c  ttim_abstraction.h  ttim_config.h
test/test_cmake/: CMakeLists.txt
test/unit_tests/: test_general.c
test/unit_tests/test_port/: CMakeLists.txt  ttim_abstraction.c  ttim_abstraction.h  ttim_config.h
